add some tool scripts

--- a/experiment/ppo-new/tools/vis_seq.ipynb
+++ b/experiment/ppo-new/tools/vis_seq.ipynb
@@ -87738,7 +87738,6 @@
     }
    ],
    "source": [
-    "from turtle import title\n",
     "\n",
     "def draw_multi_seq(seqs_dir_path: str = 'full_seq') -> go.Figure:\n",
     "    seq_dirs: List[str] = natsorted(os.listdir(seqs_dir_path))\n",
@@ -87771,7 +87770,7 @@
     "            'x': 0.5,\n",
     "        },\n",
     "        xaxis_title=f'# steps',\n",
-    "        yaxis_title=f'% gates remained to opt. to achieve SOTA',\n",
+    "        yaxis_title=f'gates', # f'% gates remained to opt. to achieve SOTA',\n",
     "    )\n",
     "    return fig\n",
     "\n",
