chore: refactor gitignore

--- a/experiment/ppo-new/tools/vis_seq.ipynb
+++ b/experiment/ppo-new/tools/vis_seq.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "qtz.init_quartz_context(\n",
     "    ['h', 'cx', 'x', 'rz', 'add',],\n",
-    "    '../../ecc_set/nam.json.ecc',\n",
+    "    '../../ecc_set/nam_ecc.json',\n",
     "    False,\n",
     "    True,\n",
     ")\n",
