add ipynb to parse log

--- a/experiment/ppo-new/tools/vis_seq.ipynb
+++ b/experiment/ppo-new/tools/vis_seq.ipynb
@@ -3884,12 +3884,18 @@
     "        xaxis_title=f'length of sequence',\n",
     "        yaxis_title=yaxis_title,\n",
     "    )\n",
-    "    fig.update_layout(legend=dict(\n",
-    "        yanchor=\"top\",\n",
-    "        y=0.99,\n",
-    "        xanchor=\"right\",\n",
-    "        x=0.99,\n",
-    "    ))\n",
+    "    fig.update_layout(\n",
+    "        legend=dict(\n",
+    "            yanchor=\"top\", y=0.99,\n",
+    "            xanchor=\"right\", x=0.99,\n",
+    "        ),\n",
+    "        # margin=dict(l=0,r=0,b=0,t=0),\n",
+    "    )\n",
+    "    # fig.update_xaxes(showgrid=False, showline=True, mirror=True, linewidth=1, linecolor='black')\n",
+    "    # fig.update_yaxes(showgrid=False, showline=True, mirror=True, linewidth=1, linecolor='black')\n",
+    "    # fig.update_layout({\n",
+    "    #     'plot_bgcolor': 'rgba(0, 0, 0, 0)',\n",
+    "    # })\n",
     "    return fig\n",
     "\n",
     "fig = draw_multi_seq_group(\n",
