--- a/experiment/ppo-new/tools/vis_seq.ipynb
+++ b/experiment/ppo-new/tools/vis_seq.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/meiyx/miniconda3/envs/quartz/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/jinjun/miniconda3/envs/quartz/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
       "ic| qtz.quartz_context.num_xfers: 8669\n"
      ]
@@ -20,7 +20,7 @@
        "8669"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3890,6 +3890,7 @@
     "            xanchor=\"right\", x=0.99,\n",
     "        ),\n",
     "        # margin=dict(l=0,r=0,b=0,t=0),\n",
+    "        font=dict(size=24, color='black'),\n",
     "    )\n",
     "    # fig.update_xaxes(showgrid=False, showline=True, mirror=True, linewidth=1, linecolor='black')\n",
     "    # fig.update_yaxes(showgrid=False, showline=True, mirror=True, linewidth=1, linecolor='black')\n",
